[tool.poetry]
name = "quotes-wss-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Lvovich Grachev <grdmitriyl@gmail.com>"]
readme = "README.md"
packages = [{include = "quotes_wss_api"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
locust = "^2.15.1"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
